# inih

./: .gitignore  CMakeLists.txt  Makefile
examples/: ini_buffer.c  ini_example.c
